--- a/.github/workflows/goreleaser-release.yaml
+++ b/.github/workflows/goreleaser-release.yaml
@@ -1,8 +1,9 @@
 name: goreleaser
 
 on:
-  pull_request:
   push:
+    tags:
+      - '*'
 
 jobs:
   goreleaser:
@@ -20,11 +21,10 @@ jobs:
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3
         with:
-          # either 'goreleaser' (default) or 'goreleaser-pro'
           distribution: goreleaser
           version: latest
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # Your GoReleaser Pro key, if you are using the 'goreleaser-pro' distribution
-          # GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
+          AUR_SSH_KEY: ${{ secrets.AUR_SSH_KEY }}
+          FURY_TOKEN: ${{ secrets.FURY_TOKEN }}
