--- a/.github/workflows/goreleaser-release.yaml
+++ b/.github/workflows/goreleaser-release.yaml
@@ -25,6 +25,6 @@ jobs:
           version: latest
           args: release --rm-dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_PUBLIC_REPOS }}
           AUR_SSH_KEY: ${{ secrets.AUR_SSH_KEY }}
           FURY_TOKEN: ${{ secrets.FURY_TOKEN }}
