--- a/.github/workflows/buf-push.yaml
+++ b/.github/workflows/buf-push.yaml
@@ -8,8 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     -
-      name: checkout branch
-      uses: actions/checkout@v2
+      name: checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     -
       uses: bufbuild/buf-setup-action@v1
       with:
