--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -6,14 +6,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      -
-        uses: actions/checkout@v1
-      -
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
-          registry-url: https://registry.npmjs.org/
-      -
-        run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+    -
+      name: checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    -
+      uses: actions/setup-node@v1
+      with:
+        node-version: 12
+        registry-url: https://registry.npmjs.org/
+    -
+      name: npm publish
+      run: |
+        cd lib
+        npm publish --access public
+      env:
+        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
