--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -17,4 +17,5 @@ jobs:
       uses: hennejg/github-tag-action@v4.3.1
       with:
         tag_prefix: ""
+        default_bump: prerelease
         github_token: ${{ secrets.GITHUB_TOKEN }}
