ci: update version workflow to use WORKFLOW_TOKEN

--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -18,4 +18,4 @@ jobs:
       with:
         tag_prefix: ""
         default_bump: prerelease
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.WORKFLOW_TOKEN }}
