--- a/example/buf.gen.yaml
+++ b/example/buf.gen.yaml
@@ -2,9 +2,17 @@ version: v1
 plugins:
   -
     name: rtk-query
-    out: gen
+    out: webui/src/gen 
     opt: paths=source_relative
   -
     name: ts
-    out: gen
+    out: webui/src/gen 
     opt: generate_dependencies,long_type_number
+  -
+    name: go
+    out: service/gen
+    opt: paths=source_relative
+  -
+    name: go-grpc
+    out: service/gen
+    opt: paths=source_relative
