--- a/example/app/package.json
+++ b/example/app/package.json
@@ -1,47 +1,26 @@
 {
-  "name": "webui",
-  "version": "0.1.0",
+  "name": "app",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@greatliontech/protobuf-ts-rtk-query": "^0.0.1",
-    "@protobuf-ts/grpcweb-transport": "^2.8.2",
+    "@greatliontech/protobuf-ts-rtk-query": "^0.0.4-1",
+    "@protobuf-ts/grpcweb-transport": "^2.8.3",
     "@reduxjs/toolkit": "^1.9.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.34.0",
-    "react-scripts": "^2.1.3",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "react-hook-form": "^7.43.7"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0"
   }
 }
