--- a/buf.gen.example.yaml
+++ b/buf.gen.example.yaml
@@ -8,3 +8,11 @@ plugins:
     name: ts
     out: example/app/src/gen
     opt: generate_dependencies,long_type_number
+  - 
+    name: go
+    out: example/service/gen
+    opt: paths=source_relative
+  - 
+    name: go-grpc
+    out: example/service/gen
+    opt: paths=source_relative
