fix: goreleaser archive deprication

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -6,12 +6,8 @@ builds:
       - windows
       - darwin
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+  -
+    id: default
 checksum:
   name_template: 'checksums.txt'
 snapshot:
@@ -48,7 +44,7 @@ nfpms:
       - apk
       - deb
       - rpm
-    release: 1
+    release: "1"
     section: default
     priority: extra
     rpm:
