--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -13,9 +13,8 @@ jobs:
       with:
         fetch-depth: 0
     -
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: 12
         registry-url: https://registry.npmjs.org/
     -
       name: install deps
@@ -27,7 +26,7 @@ jobs:
       run: |
         cd lib
         jq ".version = \"${GITHUB_REF#"refs/tags/"}\"" package.json | sponge package.json
-        yarn install
+        npm install
         npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
