--- a/example/app/package.json
+++ b/example/app/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@buf/greatliontech_protoc-gen-rtk-query-example.community_timostamm-protobuf-ts": "^2.9.0-20230724153805-7544ccea5b0b.1",
     "@greatliontech/protobuf-ts-rtk-query": "^0.0.4-1",
     "@protobuf-ts/grpcweb-transport": "^2.8.3",
     "@reduxjs/toolkit": "^1.9.3",
