--- a/example/proto/buf.yaml
+++ b/example/proto/buf.yaml
@@ -1,5 +1,5 @@
 version: v1
-name: buf.build/myorg/example
+name: buf.build/greatliontech/protoc-gen-rtk-query-example
 deps:
 - buf.build/greatliontech/protoc-gen-rtk-query
 - buf.build/googleapis/googleapis
