--- a/example/app/package.json
+++ b/example/app/package.json
@@ -12,12 +12,15 @@
     "@buf/greatliontech_protoc-gen-rtk-query-example.community_timostamm-protobuf-ts": "^2.9.0-20230724153805-7544ccea5b0b.1",
     "@greatliontech/protobuf-ts-rtk-query": "^0.3.0",
     "@protobuf-ts/grpcweb-transport": "^2.8.3",
-    "@reduxjs/toolkit": "^1.9.3",
+    "@reduxjs/toolkit": "^1.9.7",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
