--- a/.github/workflows/buf-push.yaml
+++ b/.github/workflows/buf-push.yaml
@@ -7,18 +7,16 @@ jobs:
     name: buf push protos to bsr
     runs-on: ubuntu-latest
     steps:
-    -
-      name: checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-    -
-      uses: bufbuild/buf-setup-action@v1
-      with:
-        version: '1.15.1'
-    -
-      uses: bufbuild/buf-push-action@v1
-      with:
-        input: proto
-        buf_token: ${{ secrets.BUF_TOKEN }}
+      - name: checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
+      - uses: bufbuild/buf-setup-action@v1.27.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: bufbuild/buf-push-action@v1
+        with:
+          input: proto
+          buf_token: ${{ secrets.BUF_TOKEN }}
