--- a/.github/workflows/buf-plugin.yaml
+++ b/.github/workflows/buf-plugin.yaml
@@ -10,26 +10,17 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: checkout branch
-        uses: actions/checkout@v3
-
-      - name: set up docker buildx
-        uses: docker/setup-buildx-action@v2
+      - uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: thegrumpylion
+          password: ${{ secrets.GLT_PACKAGE_TOKEN }}
 
       - name: replace buf-plugin version
         run: yq -i ".plugin_version = \"v${{github.event.release.tag_name}}\"" buf.plugin.yaml
-
-      - name: build image
-        uses: docker/build-push-action@v3
-        with:
-          push: false
-          load: true
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
-          tags: buf.build/greatliontech/rtk-query:v${{github.event.release.tag_name}}
 
       - name: login to BSR
         run: echo ${{secrets.BUF_TOKEN}} | buf registry login --token-stdin --username thegrumpylion
 
       - name: push buf plugin
-        run: buf beta registry plugin push --visibility public --image buf.build/greatliontech/rtk-query:v${{github.event.release.tag_name}}
+        run: buf beta registry plugin push --visibility public --image ghcr.io/greatliontech/protoc-gen-rtk-query:${{github.event.release.tag_name}}
