--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,11 +15,17 @@ jobs:
         with:
           go-version: 1.21
 
+      - uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: thegrumpylion
+          password: ${{ secrets.GLT_PACKAGE_TOKEN }}
+
       - uses: go-semantic-release/action@v1
         with:
           allow-initial-development-versions: true
           hooks: goreleaser
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_PUBLIC_REPOS }}
+          GITHUB_TOKEN: ${{ secrets.GLT_PACKAGE_TOKEN }}
           AUR_SSH_KEY: ${{ secrets.AUR_SSH_KEY }}
           FURY_TOKEN: ${{ secrets.FURY_TOKEN }}
