fix: buf plugin version

--- a/.github/workflows/buf-plugin.yaml
+++ b/.github/workflows/buf-plugin.yaml
@@ -16,11 +16,16 @@ jobs:
           username: thegrumpylion
           password: ${{ secrets.GLT_PACKAGE_TOKEN }}
 
+      - uses: actions/checkout@v4
+
       - name: replace buf-plugin version
-        run: yq -i ".plugin_version = \"v${{github.event.release.tag_name}}\"" buf.plugin.yaml
+        run: yq -i ".plugin_version = \"${{github.event.release.tag_name}}\"" buf.plugin.yaml
 
       - name: login to BSR
         run: echo ${{secrets.BUF_TOKEN}} | buf registry login --token-stdin --username thegrumpylion
 
       - name: push buf plugin
-        run: buf beta registry plugin push --visibility public --image ghcr.io/greatliontech/protoc-gen-rtk-query:${{github.event.release.tag_name}}
+        run: |
+          TAG=${{ github.event.release.tag_name }}
+          VERSION=${TAG#v}
+          buf beta registry plugin push --visibility public --image ghcr.io/greatliontech/protoc-gen-rtk-query:${VERSION}
