--- a/.github/workflows/buf-plugin.yaml
+++ b/.github/workflows/buf-plugin.yaml
@@ -10,7 +10,6 @@ jobs:
       - name: setup env
         run: |
           echo "TAG=${{ github.event.registry_package.package_version.container_metadata.tag.name }}" >> $GITHUB_ENV
-          echo "VERSION=v${TAG}" >> $GITHUB_ENV
 
       - uses: bufbuild/buf-setup-action@v1.27.0
         with:
@@ -29,7 +28,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: replace buf-plugin version
-        run: yq -i ".plugin_version = \"${VERSION}\"" buf.plugin.yaml
+        run: yq -i ".plugin_version = \"v${TAG}\"" buf.plugin.yaml
 
       - name: login to BSR
         run: echo ${{secrets.BUF_TOKEN}} | buf registry login --token-stdin --username thegrumpylion
