--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -91,7 +91,8 @@ publishers:
     dir: "{{ dir .ArtifactPath }}"
     cmd: curl -F package=@{{ .ArtifactName }} https://{{ .Env.FURY_TOKEN }}@push.fury.io/greatliontech/
 dockers:
-  - image_templates: ["ghcr.io/greatliontech/{{ .ProjectName }}:{{ .Version }}"]
+  - image_templates:
+      ["ghcr.io/greatliontech/{{ .ProjectName }}:v{{ .Version }}"]
     dockerfile: Dockerfile
     build_flag_templates:
       - --label=org.opencontainers.image.title={{ .ProjectName }}
